# systemd-fail-notifications

./: .gitignore  Cargo.toml  Dockerfile  Readme.md  about.hbs  about.toml  build.rs  flake.nix  rust-toolchain.toml  shell.nix
.github/workflows/: build-image.yml  build-release.yml  cargo-audit.yml  cargo-test.yml
.reuse/: dep5
LICENSES/: MIT.txt
changelogs/: v0.1.0.md  v0.1.1.md  v0.2.0.md  v0.2.1.md  v0.2.10.md  v0.2.12.md  v0.2.13.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.2.5.md  v0.2.6.md  v0.2.7.md  v0.2.8.md  v0.2.9.md  v0.3.0.md  v0.4.0.md  v0.4.1.md  v0.4.2.md
src/: config.rs  filter.rs  main.rs  state.rs  status.rs
src/dbus_systemd/: connection.rs  dbus.rs  mod.rs
src/notifications/: discord.rs  mod.rs
