[package]
name = "systemd-fail-notifications"
version = "0.2.3"
authors = ["localthomas"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/localthomas/systemd-fail-notifications"
readme = "README.md"
description = "This is a standalone binary that listens on the system bus and talks to systemd to identify failed units."
edition = "2018"

[[bin]]
name = "systemd-fail-notifications"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.44"
chrono = "0.4.19"
clap = { version = "3.0.0-beta.4", default-features = false, features = ["std", "env"] }
gethostname = "0.2.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0.68"
signal-hook = "0.3.10"
ureq = { version = "2.2.0", features = ["json"] }
url = "2.2.2"
zbus = "1.9.2"
zvariant = "2.9.0"
