[package]
name = "systemd-fail-notifications"
version = "0.2.9"
authors = ["localthomas"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/localthomas/systemd-fail-notifications"
readme = "README.md"
description = "This is a standalone binary that listens on the system bus and talks to systemd to identify failed units."
edition = "2018"

[[bin]]
name = "systemd-fail-notifications"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", default-features = false, features = ["std", "env"] }
gethostname = "0.4"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3"
time = { version = "0.3", features = ["formatting"] }
ureq = { version = "2.4", features = ["json"] }
url = "2.2"
zbus = "3.13"
zvariant = "3.13"
